Remove dependency from Guava
The drawback is, using javax.ws.rs.core.MediaType requires RuntimeDelegate instance just to initialize MediaType class. Alternative is using org.springframework.http.MediaType. I'll try to do this in next commit